# muse

./: Cargo.toml
docs/: extraction-service-design.md
fixtures/assets/: manifest.json
fixtures/assets/docx/: profile_upload_fixture.docx
fixtures/extraction/: docx_upload_fixture.json  image_upload_async_failure_fixture.json  image_upload_cache_hit_fixture.json  image_upload_fixture.json  image_upload_sync_failure_fixture.json  pdf_raster_async_failure_fixture.json  scanned_pdf_upload_fixture.json  text_layer_pdf_upload_fixture.json
fixtures/ocr/: local_onnx_pipeline_fixture.json
fixtures/parser/: docx_parser_fixture.json  image_parser_fixture.json  scanned_pdf_parser_fixture.json  text_layer_pdf_parser_fixture.json
src/: config.rs  lib.rs  main.rs  telemetry.rs
src/api/: mod.rs
src/app/: mod.rs
src/docx/: mod.rs
src/domain/: mod.rs
src/events/: mod.rs
src/extractor/: mod.rs
src/ingestion/: mod.rs
src/ocr/: mod.rs
src/parser/: binary.rs  docx.rs  image.rs  mod.rs  pdf.rs  shared.rs  text.rs  url.rs
src/pdf/: mod.rs
src/postprocess/: mod.rs
src/queue/: mod.rs
src/storage/: mod.rs
src/test_support/: fixtures.rs
