[package]
name = "muse_extract_service"
version = "0.1.0"
edition = "2024"

[features]
default = []
onnx-runtime = ["dep:onnxruntime", "dep:onnxruntime-sys-ng", "dep:tokenizers"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
lopdf = "0.39"
onnxruntime = { package = "onnxruntime-ng", version = "1.16.1", optional = true }
onnxruntime-sys-ng = { version = "1.16.1", optional = true }
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"], optional = true }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
